discussion/kv_engine/161649/161649_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48038: Remove broken CM::isCheckpointCreationForHighMemUsage

I remove the function rather than fixing it as checkpoint creation is
driven by checkpoint parameters that refer to the checkpoints memory
state only.

Note that the function is broken in a way that makes it always return
'false', so this patch is not really leading to any  behaviour change.

Change-Id: I8a6d3032bc6c14324c3f3a53119a1e1671efa425

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-16 06:20:34.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-16 06:49:39.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34045/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:445:38:
error: too many arguments to function call, expected single argument "lh", have 2 arguments
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34045/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39964/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint_manager.cc(445): error C2660: "CheckpointManager::maybeCreateNewCheckpoint": function does not take 2 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39964/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12479/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:445:38: error: too many arguments to function call, expected single argument "lh", have 2 arguments [clang-diagnostic-error]
        maybeCreateNewCheckpoint(lh, false);
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:694:5: note: "maybeCreateNewCheckpoint" declared here
    void maybeCreateNewCheckpoint(const std::lock_guard<std::mutex>& lh);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:744:34: error: too many arguments to function call, expected single argument "lh", have 2 arguments [clang-diagnostic-error]
    maybeCreateNewCheckpoint(lh, false);
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:694:5: note: "maybeCreateNewCheckpoint" declared here
    void maybeCreateNewCheckpoint(const std::lock_guard<std::mutex>& lh);
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12479/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:445:38:
error: too many arguments to function call, expected single argument "lh", have 2 arguments [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12479/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2146/ : FAILURE

Compile error at [2021-09-16T06:34:05.456Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/checkpoint_manager.cc:445:43:
error: no matching function for call to ?CheckpointManager::maybeCreateNewCheckpoint(std::lock_guard<std::mutex>&, bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2146/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2121/ : FAILURE

Compile error at [2021-09-16T06:25:46.924Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:445:38:
error: too many arguments to function call, expected single argument "lh", have 2 arguments
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2121/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14340/ : FAILURE

Compile error at [2021-09-16T06:24:05.222Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint_manager.cc:445:43:
error: no matching function for call to ?CheckpointManager::maybeCreateNewCheckpoint(std::lock_guard<std::mutex>&, bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14340/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14841/ : FAILURE

Compile error at [2021-09-16T06:26:19.718Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:445:38:
error: too many arguments to function call, expected single argument "lh", have 2 arguments
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14841/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14095/ : FAILURE

Compile error at [2021-09-16T06:23:50.941Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint_manager.cc:445:43:
error: no matching function for call to ?CheckpointManager::maybeCreateNewCheckpoint(std::lock_guard<std::mutex>&, bool)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14095/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22342/ : FAILURE

Compile error at [2021-09-16T06:27:53.609Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/checkpoint_manager.cc:445:38:
error: too many arguments to function call, expected single argument "lh", have 2 arguments
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22342/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13235/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11268/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
